RESOLVED FIXED270400
[WebGPU] Fix bounds check with offset in Queue::writeTexture
https://bugs.webkit.org/show_bug.cgi?id=270400
Summary [WebGPU] Fix bounds check with offset in Queue::writeTexture
Alex Christensen
Reported 2024-03-02 15:47:50 PST
Attachments
Alex Christensen
Comment 1 2024-03-02 15:48:30 PST
EWS
Comment 2 2024-03-02 17:41:29 PST
Committed 275593@main (6dae676c4f80): <https://commits.webkit.org/275593@main> Reviewed commits have been landed. Closing PR #25380 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.