Cherry-pick 6dae676c4f80. rdar://123810754

[WebGPU] Fix bounds check with offset in Queue::writeTexture
    https://bugs.webkit.org/show_bug.cgi?id=270400
    rdar://123810754

    Reviewed by Mike Wyrzykowski.

    * LayoutTests/fast/webgpu/queue-write-texture-offset-expected.txt: Added.
    * LayoutTests/fast/webgpu/queue-write-texture-offset.html: Added.
    * Source/WebGPU/WebGPU/Queue.mm:
    (WebGPU::Queue::writeTexture):

    Canonical link: https://commits.webkit.org/275593@main